# moq-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  REUSE.toml
.github/workflows/: fly.yml  heap-profile-image.yml  pr.yml  release.yml
.planning/: blo-6020-next-phase-plan.md  m1-next-session-prompt.md  m1-smoke.sh  m4-b-mig-transport-subgroups-design.md  m4-next-session-2026-06-03.md  m4-next-session-2026-06-04-blo8886.md  m4-next-session-2026-06-04-blo8989-hang-just-ci.md  m4-next-session-2026-06-07-blo9158-recv-recall-tier.md  m4-next-session-prompt.md  m4-session-handoff.md  m4-shaka-ws1-reassembler-plan.md  m4-t1-next-session-prompt.md  m4-t1.2-DONE-handoff.md  m4-t1.2-bugfix-review.md  m4-t1.2-session-handoff.md  m4-t1.2-video-playback-design.md  m4-t1.2-video-playback-plan.md  m4-t1.7-e2e.sh  m4-t1.7-karma.sh  m4-t1.7-session-handoff.md  moq-rs-m0-interop-survey.md  moq-rs-m0-results.md  moq-rs-m1-adr.md  moq-rs-m1-results.md  moq-rs-m1b-frag-results.md  moq-rs-m1b-g6-bytediff-results.md  moq-rs-m1b-obj-id-delta-results.md  moq-rs-m4-adr.md  next-session-2026-06-05-adapter-flake-ally.md
.planning/m0-logs/: pids.env  sub-out.fmp4
.planning/m4-scoping/: B-publisher-audio.md  T1.5c-timing-avsync.md  T1.6-transport-factory.md  T1.FEC-trailer-fix.md
.planning/m4-t1.7-e2e/: capture-av-fixture.md  capture-opus-fixture.md  make_av_capture.sh  moq_mmt_capture_av.json  moq_mmt_capture_full.json  moq_mmt_capture_opus.json  serve.py
.playwright-mcp/: page-2026-06-20T20-14-32-862Z.yml  page-2026-06-22T14-48-57-329Z.yml  page-2026-06-22T14-51-26-195Z.yml
graphify-out/: GRAPH_REPORT.md  graph.json  manifest.json
mmtp-moq-carriage/: Cargo.toml  README.md
mmtp-moq-carriage/src/: lib.rs
mmtp-moq-carriage/tests/: interop.rs
moq-catalog/: Cargo.toml
moq-catalog/src/: lib.rs  multicast.rs
moq-catalog/tests/: golden.rs
moq-catalog/tests/fixtures/negative/: legacy-selection-params.json  missing-mmtp-fields.json  multicast-endpoint-missing-protocol-and-source.json  network-source-object.json  raptorq-unaligned-symbol.json  repair-track-legacy-shape.json
moq-catalog/tests/fixtures/positive/: fec-multicast.json  flat-av.json  ticks-and-mixed-timescales.json
moq-clock-ietf/: CHANGELOG.md  Cargo.toml
moq-clock-ietf/src/: main.rs
moq-native-ietf/: CHANGELOG.md  Cargo.toml
moq-native-ietf/src/: quic.rs
moq-pub/: CHANGELOG.md  Cargo.toml
moq-pub-mmtp/: Cargo.toml  HEAP_PROFILING.md  README.md
moq-pub-mmtp/examples/: mmtp_packet_vectors.rs  reassembler_vectors.rs  synth_mmtp.rs
moq-pub-mmtp/src/: cli.rs  datagram.rs  framing.rs  main.rs  mmtp_parse.rs  profiling.rs  publish.rs  udp.rs
moq-pub-mmtp/tests/: shred-datagram-e2e.sh
moq-pub-mmtp/tests/assets/: align.json  moq_mmt_capture.json  moq_mmt_fec_on_capture.json  shred-datagram.json
moq-pub/src/: main.rs  media.rs
moq-relay-ietf/: CHANGELOG.md  Cargo.toml
moq-relay-ietf/src/: consumer.rs  coordinator.rs  covering_prefix_set.rs  lib.rs  local.rs  metrics.rs  producer.rs  relay.rs  remote.rs  session.rs  upstream_namespaces.rs
moq-sub/: CHANGELOG.md  Cargo.toml  README.md
moq-sub-raw/: Cargo.toml
moq-sub-raw/src/: cli.rs  main.rs  subscribe.rs
moq-sub/src/: main.rs  media.rs
moq-test-client/: CHANGELOG.md  Cargo.toml
moq-test-client/src/: main.rs  scenarios.rs
moq-transport/src/: lib.rs  profile.rs
moq-transport/src/coding/: kvp.rs  mod.rs  track_namespace.rs  vi64.rs
moq-transport/src/message/: mod.rs  subscribe_ok.rs
moq-transport/src/profile/: draft19.rs
moq-transport/src/serve/: datagram.rs  subgroup.rs  track.rs
moq-transport/src/session/: draft19.rs  mod.rs  pending_requests.rs  publish_received.rs  published.rs  published_track.rs  publisher.rs  reader.rs  request_id.rs  subscribe.rs  subscribe_namespace.rs  subscribed.rs  subscribed_namespace.rs  subscriber.rs  writer.rs
moq-transport/src/setup/: version.rs
moq-transport/src/watch/: queue.rs  state.rs
moq-transport/tests/: draft19_wire.rs  wire_vectors.rs
moq-transport/tests/fixtures/: moqt-16-v1.json
