# SPDX-FileCopyrightText: 2025-2026 Blockcast Inc. and contributors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "mmtp-moq-carriage"
description = "Native MMTP and AL-FEC object carriage for moq-rs"
authors = ["moq-rs contributors"]
repository = "https://github.com/cloudflare/moq-rs"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
moq-transport = { path = "../moq-transport", version = "0.16" }
thiserror = "1"

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
